src/com/wkq/interpreter/javacc/CMMParser.java
/* Generated By:JavaCC: Do not edit this line. CMMParser.java */
package com.wkq.interpreter.javacc;
import java.io.FileInputStream;
import java.io.InputStream;
import java.util.Scanner;

public class CMMParser implements CMMParserConstants {
    static SymbolTable table = new SymbolTable();
    static int level = 0;
    public static void main(String args[]) throws ParseException {
        try {
            InputStream inputstream = new FileInputStream("src/com/wkq/interpreter/javacc/test.c");
            CMMParser parser = new CMMParser(inputstream);
            parser.procedure();
        }catch (Exception e){
            System.err.println(e);
        }
    }

/*
语法部分
实现if语句、while语句、for语句、read语句、write语句、声明语句�?�函数声明语句�?�函数调用语句�?�赋值语句�?�返回语�?
语义部分
�?查不同类型之间的是否可以进行运算和比较；
�?查除数不能为0�?
�?查变量是否声明；
�?查函数是否声明；
�?查变量是否重复声明；
�?查函数是否重复定义；
�?查赋值时类型是否正确�?

语法语义部分
写�?�归下降的语法分析，并在其中设置语义分析
*/
  static final public void procedure() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      Statement();
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_2(3)) {
      SequenceStatement();
    } else if (jj_2_3(3)) {
      IfStatement();
    } else if (jj_2_4(3)) {
      While();
    } else if (jj_2_5(3)) {
      For();
    } else if (jj_2_6(3)) {
      Read();
    } else if (jj_2_7(3)) {
      Write();
    } else if (jj_2_8(3)) {
      StatementBlock();
    } else if (jj_2_9(3)) {
      DeclareFunction();
    } else if (jj_2_10(3)) {
      FunctionCall();
    } else if (jj_2_11(3)) {
      AssignStatement();
    } else if (jj_2_12(3)) {
      Return();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public int type() throws ParseException {
    if (jj_2_13(3)) {
      jj_consume_token(INT);
          {if (true) return 0;}
    } else if (jj_2_14(3)) {
      jj_consume_token(REAL);
                            {if (true) return 1;}
    } else if (jj_2_15(3)) {
      jj_consume_token(VOID);
                                              {if (true) return 2;}
    } else if (jj_2_16(3)) {
      jj_consume_token(CHAR);
                                                                {if (true) return 3;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//顺序
  static final public void SequenceStatement() throws ParseException {
    if (jj_2_17(3)) {
      Declare();
    } else if (jj_2_18(3)) {
      AssignStatement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMI);
  }

  static final public void Declare() throws ParseException {
                   Token tk; String name;Symbol tmp;int type;Value v;String value;
    type = type();
    tk = jj_consume_token(IDENTIFIERS);
    name = tk.image;
    tmp = new Symbol(level,name);
    tmp.setType(type);
    table.registerSymbol(tmp);
    if (jj_2_19(3)) {
      jj_consume_token(ASSIGN);
      v = expression();
                            table.symbolList.get(table.symbolList.size()-1).setValue(v.value);
    } else {
      ;
    }
    label_2:
    while (true) {
      if (jj_2_20(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      tk = jj_consume_token(IDENTIFIERS);
         name = tk.image;
         tmp = new Symbol(level,name);
         tmp.setType(type);
         table.registerSymbol(tmp);
      if (jj_2_21(3)) {
        jj_consume_token(ASSIGN);
        v = expression();
                               table.symbolList.get(table.symbolList.size()-1).setValue(v.value);
      } else {
        ;
      }
    }
  }

  static final public void AssignStatement() throws ParseException {
                          Token tk; Symbol tmp; String value;Value v;
    tk = jj_consume_token(IDENTIFIERS);
             tmp=table.getSymbol(tk.image);
    jj_consume_token(ASSIGN);
    v = expression();
                                  tmp.setValue(v.value);
  }

//条件
  static final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPS);
    expression();
    jj_consume_token(RPS);
    Statement();
    if (jj_2_22(3)) {
      jj_consume_token(ELSE);
      Statement();
    } else {
      ;
    }
  }

  static final public void While() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPS);
    expression();
    jj_consume_token(RPS);
    Statement();
  }

  static final public void For() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(LPS);
    SequenceStatement();
    expression();
    jj_consume_token(SEMI);
    AssignStatement();
    jj_consume_token(RPS);
    Statement();
  }

  static final public void Read() throws ParseException {
Token tk;
    jj_consume_token(READ);
    jj_consume_token(LPS);
    tk = jj_consume_token(IDENTIFIERS);
         Symbol tmp = table.getSymbol(tk.image);
         Scanner sc = new Scanner(System.in);
         tmp.setValue(sc.nextLine());
    jj_consume_token(RPS);
    jj_consume_token(SEMI);
  }

  static final public void Write() throws ParseException {
              Value v;
    jj_consume_token(WRITE);
    jj_consume_token(LPS);
    v = expression();
    jj_consume_token(RPS);
    jj_consume_token(SEMI);
        System.out.print(v.value);
  }

  static final public void DeclareFunction() throws ParseException {
    Token tk;FunSymbol tmp;String name;level++;
    Symbol tmp1;int type;
    type = type();
    tk = jj_consume_token(IDENTIFIERS);
        name = tk.image;
        tmp = new FunSymbol(name);
        tmp.setType(type);
        table.registerFunSymbol(tmp);
    jj_consume_token(LPS);
    if (jj_2_24(3)) {
      type = type();
      tk = jj_consume_token(IDENTIFIERS);
       name = tk.image;
       tmp1 = new Symbol(level,name);
       tmp1.setType(type);
       table.registerSymbol(tmp1);
      label_3:
      while (true) {
        if (jj_2_23(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        type = type();
        tk = jj_consume_token(IDENTIFIERS);
       name = tk.image;
       tmp1 = new Symbol(level,name);
       tmp1.setType(type);
       table.registerSymbol(tmp1);
      }
    } else {
      ;
    }
    jj_consume_token(RPS);
    StatementBlock();
  }

  static final public void StatementBlock() throws ParseException {
    jj_consume_token(LBRACE);
             level++;
    label_4:
    while (true) {
      if (jj_2_25(3)) {
        ;
      } else {
        break label_4;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
         table.deregisterSymbol(level);
         level--;
  }

  static final public Value expression() throws ParseException {
                      Value v1;Value v2=null;Value v = new Value();int type=0;Token tk=null;
    v1 = polynomial();
    if (jj_2_32(3)) {
      if (jj_2_26(3)) {
        tk = jj_consume_token(EQ);
        v2 = polynomial();
                                type=1;
      } else if (jj_2_27(3)) {
        tk = jj_consume_token(NEQ);
        v2 = polynomial();
                                  type=2;
      } else if (jj_2_28(3)) {
        tk = jj_consume_token(GT);
        v2 = polynomial();
                                 type=3;
      } else if (jj_2_29(3)) {
        tk = jj_consume_token(GET);
        v2 = polynomial();
                                  type=4;
      } else if (jj_2_30(3)) {
        tk = jj_consume_token(LT);
        v2 = polynomial();
                                 type=5;
      } else if (jj_2_31(3)) {
        tk = jj_consume_token(LET);
        v2 = polynomial();
                                  type=6;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
            if(v2==null) {if (true) return v1;}
            if(v1.type==3||v2.type==3) {if (true) throw new ParseException("at Line "+tk.beginLine+": type char cannot be compared");}
            float f1 = Float.valueOf(v1.value);
            float f2 = Float.valueOf(v2.value);
            switch(type){
                case 0:  {if (true) return v1;}
                case 1: if(f1==f2) {v.value="1"; v.type=0; {if (true) return v;}}  else {v.value="0"; v.type=0; {if (true) return v;}}
                case 2:if(f1==f2) {v.value="0"; v.type=0; {if (true) return v;}}  else {v.value="1"; v.type=0; {if (true) return v;}}
                case 3:if(f1>f2) {v.value="1"; v.type=0; {if (true) return v;}}  else {v.value="0"; v.type=0; {if (true) return v;}}
                case 4:if(f1>=f2) {v.value="1"; v.type=0; {if (true) return v;}}  else {v.value="0"; v.type=0; {if (true) return v;}}
                case 5:if(f1<f2) {v.value="1"; v.type=0; {if (true) return v;}}  else {v.value="0"; v.type=0; {if (true) return v;}}
                case 6:if(f1<=f2) {v.value="1"; v.type=0; {if (true) return v;}}  else {v.value="0"; v.type=0; {if (true) return v;}}
                default:{if (true) return v1;}
            }
    throw new Error("Missing return statement in function");
  }

  static final public Value polynomial() throws ParseException {
                      Value v1;Value v2=null;Token tk=null;int type=0;Value v = new Value();
    v1 = term();
    if (jj_2_35(3)) {
      if (jj_2_33(3)) {
        tk = jj_consume_token(PLUS);
                              type=1;
      } else if (jj_2_34(3)) {
        tk = jj_consume_token(MINUS);
                                                  type=2;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      v2 = polynomial();
    } else {
      ;
    }
            if(v2==null) {if (true) return v1;}
            if(v1.type!=v2.type && (v1.type==3||v2.type==3)){
                {if (true) throw new ParseException("at Line "+tk.beginLine+" The operation cannot be performed with different types.");}
            }
            if(v1.type==3&&v2.type==3&&type==1){
                v.type=3;
                v.value=v1.value+v1.value;
                {if (true) return v;}
            }
            if(v1.type==3&&v2.type==3&&type==2){
                {if (true) throw new ParseException("at Line "+tk.beginLine+" This type of operation is not allowed");}
            }
            if(v1.type==1 || v2.type==1) v.type=1;
            else if(v1.type==3&&v2.type==3) v.type=3;
            else v.type=0;
            float f1 = Float.valueOf(v1.value);
        float f2 = Float.valueOf(v2.value);
        switch(type){
            case 1:float f = f1+f2;v.value=String.valueOf(f);{if (true) return v;}
            case 2:float f0 = f1-f2;v.value=String.valueOf(f0);{if (true) return v;}
            default:{if (true) return v1;}
        }
    throw new Error("Missing return statement in function");
  }

  static final public Value term() throws ParseException {
               Value v1;Value v2=null;Token tk=null; int type=0;Value v=new Value();
    v1 = factor();
    if (jj_2_38(3)) {
      if (jj_2_36(3)) {
        tk = jj_consume_token(DIV);
                               type=1;
      } else if (jj_2_37(3)) {
        tk = jj_consume_token(MUL);
                                                 type=2;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      v2 = term();
    } else {
      ;
    }
            if(v2==null) {if (true) return v1;}
            if(v1.type!=v2.type && (v1.type==3||v2.type==3)){
            {if (true) throw new ParseException("at Line "+tk.beginLine+" The operation cannot be performed with different types.");}
            }
            if(v1.type==3&&v2.type==3){
                {if (true) throw new ParseException("at Line "+tk.beginLine+" This type of operation is not allowed");}
            }
            if(v1.type==1 || v2.type==1) v.type=1;
            else v.type=0;
            float f1=Float.valueOf(v1.value);
            float f2=Float.valueOf(v2.value);
            switch(type){
                case 1:if(f2==0){if (true) throw new ParseException("The divisor can not be 0.");}else {float f=f1/f2;v.value=String.valueOf(f);{if (true) return v;}}
                case 2:float f0=f1*f2;v.value=String.valueOf(f0);{if (true) return v;}
                default:{if (true) return v1;}
            }
    throw new Error("Missing return statement in function");
  }

  static final public Value factor() throws ParseException {
                 Token tk;String name;boolean isFun=false;Value v = new Value();
    if (jj_2_42(3)) {
      v = constant();
                     {if (true) return v;}
    } else if (jj_2_43(3)) {
      jj_consume_token(LPS);
      v = expression();
                              {if (true) return v;}
      jj_consume_token(RPS);
    } else if (jj_2_44(3)) {
      jj_consume_token(PLUS);
      v = term();
                         {if (true) return v;}
    } else if (jj_2_45(3)) {
      jj_consume_token(MINUS);
      v = term();
                          v.value="-"+v.value;{if (true) return v;}
    } else if (jj_2_46(3)) {
      tk = jj_consume_token(IDENTIFIERS);
      if (jj_2_41(3)) {
        jj_consume_token(LPS);
        if (jj_2_40(3)) {
          expression();
          label_5:
          while (true) {
            if (jj_2_39(3)) {
              ;
            } else {
              break label_5;
            }
            jj_consume_token(COMMA);
            expression();
          }
        } else {
          ;
        }
        jj_consume_token(RPS);
                                                                       isFun=true;
      } else {
        ;
      }
            name = tk.image;
            if(isFun){
                FunSymbol tmp = table.getFunSymbol(name);
                v.type=tmp.getType();
                v.value=tmp.getValue();
                {if (true) return v;}
            }else{
                Symbol tmp = table.getSymbol(name);
                v.type=tmp.getType();
                v.value=tmp.getValue();
                {if (true) return v;}
            }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Value constant() throws ParseException {
                  Value v = new Value();Token tk;
    if (jj_2_47(3)) {
      tk = jj_consume_token(INTEGER_LITERAL);
                          v.type=0;v.value=tk.image;
    } else if (jj_2_48(3)) {
      tk = jj_consume_token(REAL_LITERAL);
                       v.type=1;v.value=tk.image;
    } else if (jj_2_49(3)) {
      tk = jj_consume_token(STRING);
                 v.type=3;v.value=tk.image;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public void FunctionCall() throws ParseException {
                     Token tk;FunSymbol tmp;String name;
    tk = jj_consume_token(IDENTIFIERS);
        name=tk.image;
        tmp=new FunSymbol(name);
        table.getFunSymbol(name);
    jj_consume_token(LPS);
    if (jj_2_51(3)) {
      expression();
      label_6:
      while (true) {
        if (jj_2_50(3)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(COMMA);
        expression();
      }
    } else {
      ;
    }
    jj_consume_token(RPS);
  }

  static final public void Return() throws ParseException {
    jj_consume_token(RETURN);
    expression();
    jj_consume_token(SEMI);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }
